<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_main"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:id="@+id/btn_navigation_before"
            android:layout_marginRight="80dp"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/baseline_navigate_before_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinssemibold"
            android:text="@string/homepage"
            android:textSize="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="80dp"
            android:textColor="@color/white"/>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/baseline_notifications_active_24"/>
    </LinearLayout>

    <LinearLayout
        android:paddingTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinsregular"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="16sp"
            android:textColor="@color/youngpurple"
            android:fontFamily="@font/poppinsregular"
            android:layout_marginLeft="8dp"/>
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/your"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinsregular"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/email"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email2"
            android:textColor="@color/youngpurple"
            android:fontFamily="@font/poppinsregular"
            android:paddingLeft="5dp"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/hasbeen"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasbeen"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinsregular"
            android:paddingLeft="5dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/your2"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your2"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinsregular"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/phone"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone2"
            android:textColor="@color/youngpurple"
            android:paddingLeft="5dp"
            android:fontFamily="@font/poppinsregular"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/hasbeen2"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hasbeen2"
            android:paddingLeft="5dp"
            android:fontFamily="@font/poppinsregular"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>
